--- a/Style.css
+++ b/Style.css
@@ -28,10 +28,10 @@ a:visited, a:hover {
  color: rgba(251, 255, 242, 0.9);
 }
 
-.Text-Hello {
+.textHello {
  width: 50%;
 }
 
-.Text-Bio {
+.textBio {
  width: 50%;
 }
