--- a/Style.css
+++ b/Style.css
@@ -33,10 +33,25 @@ a:visited, a:hover {
  width: 50%;
 }
 
-.tableRow1, .tableRow3 {
-  background-color: rgba(251, 255, 242, 0.9);
+.table {
+  width: 100%;
+  height: 250px;
 }
 
-.tableRow2, .tableRow4 {
-  background-color: rgba(51, 194, 255, 1);
+.table {
+  
+
+.tableRowW {
+  background-color: rgba(251, 255, 242, 0.9);
+  width: 50%;
 }
+
+.tableRowB {
+  background-color: rgba(251, 255, 242, 0.9);
+  width: 50%;
+ }
+ 
+ .tablerowN {
+  background-color: rgba(51, 194, 255, 1);
+  width: 25%;
+ }
