--- a/Style.css
+++ b/Style.css
@@ -2,19 +2,24 @@ body {
  background: rgb(51, 194, 255);
 }
 
+#banner img{
+  width: 100%;
+  height:100%;
+}
+
 h1 {
  font-family: "Pinyon Script", Arial, ComicSans;
  font-size: 96px;
  background-color: rgba(251, 255, 242, 0.9);
  Color: rgba(51, 194, 255, 1);
- text-align: Center; 
+ text-align: Center;
 }
 
 h2 {
  font-family: "Pinyon Script", Arial, ComicSans;
  font-size: 24px;
  Color: rgba(251, 255, 242, 0.9);
- text-align: Center; 
+ text-align: Center;
 }
 
 p {
@@ -47,7 +52,7 @@ a:visited, a:hover {
   background-color: rgba(51, 194, 255, 1);
   width: 50%;
  }
- 
+
  .tablerowN {
   background-color: rgba(51, 194, 255, 1);
   width: 25%;
