--- a/Style.css
+++ b/Style.css
@@ -1,59 +1,48 @@
-body {
- background: rgb(51, 194, 255);
+* {
+    background-color: rgba(251, 255, 242, 1);
 }
 
-#banner img{
-  width: 100%;
-  height:100%;
+.banner {
+    height: 100%;
+    width: 100%;
+    text-align: center;
+}
+
+.banner img {
+    height: 70%;
+    width: 70%;
 }
 
 h1 {
- font-family: "Pinyon Script", Arial, ComicSans;
- font-size: 96px;
- background-color: rgba(251, 255, 242, 0.9);
- Color: rgba(51, 194, 255, 1);
- text-align: Center;
+    font-family: "Pinyon Script", Arial, ComicSans;
+    font-size: 24px;
+    color: rgba(51, 194, 255, 1);
+    text-align: Center;
 }
 
-h2 {
- font-family: "Pinyon Script", Arial, ComicSans;
- font-size: 24px;
- Color: rgba(251, 255, 242, 0.9);
- text-align: Center;
-}
-
-p {
- font-family: Times, Arial, ComicSans;
- font-size: 24px;
- Color: rgba(251, 255, 242, 0.9);
- text-align: Center;
+.textBio {
+    margin: auto;
+    width: 50%;
+    font-family: Times, Arial, ComicSans;
+    font-size: 24px;
+    color: rgba(51, 194, 255, 1);
+    text-align: Center;
 }
 
 a:visited, a:hover {
- color: rgba(251, 255, 242, 0.9);
+    color: rgba(51, 194, 255, 1);
 }
 
-.textAll {
- margin: auto;
- width: 50%;
+#myTable {
+    width: 70%;
+    height: 440px;
+    margin: auto;
 }
 
-.table {
-  width: 100%;
-  height: 440px;
+#tableRow2, #tableRow4 {
+    background-color: rgba(251, 255, 242, 0.9);
 }
 
-.tableRowW {
-  background-color: rgba(251, 255, 242, 0.9);
-  width: 50%;
+#tableRow1, #tableRow3 {
+    background-color: rgba(51, 194, 255, 1);
 }
-
-.tableRowB {
-  background-color: rgba(51, 194, 255, 1);
-  width: 50%;
- }
-
- .tablerowN {
-  background-color: rgba(51, 194, 255, 1);
-  width: 25%;
- }
