--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body, html {
 @media only screen and (max-device-width:1024px) {
     #bannerImg {
         background-attachement: scroll;
+        background-position: center;
     }
 }
 
