--- a/style.css
+++ b/style.css
@@ -19,11 +19,8 @@ body, html {
 
 #bannerImg {
     height: 90%;
-    background-image: url("helloWorld.gif");
+    background: url("helloWorld.gif") no-repeat center center fixed;
     background-color: red;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
     background-size: 50%;
     padding: 0;
 }
