--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+/*ALL*/
+
+
 /*Setting up initial conditions for styling */
 
 * {
@@ -10,55 +13,6 @@ body, html {
 }
 
 
-/*Setting up the scrolling effect with the gif/banner */
-
-.parallax {
-    height: 100%;
-    width: 100%;
-}
-
-.parallaxImg {
-    height: 90%;
-    width: 100%;
-}
-
-.parallaxImg img {
-    position: fixed;
-    width: 280px;
-    height: 200px;
-    top: 50%;
-    left: 50%;
-    margin-top: -100px;
-    margin-left: -140px;
-    z-index: -1;
-}
-
-.parallaxBtn {
-    height: 10vh;
-    width: auto;
-}
-
-#arrow {
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
-    font-size: 48px;
-    color: rgb(51, 194, 255);
-}
-
-
-/*Stops page trying to keep parallax effect on small screens */
-
-
-/*Styling for the rest of the page */
-
-.all {
-    height: 98%;
-    border: 5px solid rgba(150, 150, 150, 0.5);
-    background-color: rgba(255, 255, 255, 1);
-}
-
-
 /*Cool nav bar code starts here...*/
 
 .navBar {
@@ -67,7 +21,7 @@ body, html {
     align-items: center;
     align-content: center;
     flex-wrap: wrap;
-    width: 60%;
+    width: 80%;
     margin: 0 auto;
     min-height: 10%;
 }
@@ -77,13 +31,14 @@ body, html {
     margin: 10px 20px;
     padding: 30px;
     text-align: center;
-    text-transform: uppercase;
     transition: 0.75s;
     background-size: 200% auto;
     font-family: 'Poppins', sans-serif, times;
     /* text-shadow: 0px 0px 10px rgba(0,0,0,0.2);*/
     box-shadow: 0 0 20px #eee;
     border-radius: 10px;
+    height: 10%;
+    width: 10%;
 }
 
 .btn:hover {
@@ -91,23 +46,86 @@ body, html {
 }
 
 .btn-h {
-    background-image: linear-gradient(to right, rgba(150, 150, 150, 0.5) 6%, rgb(51, 194, 255) 51%, rgb(251, 194, 255) 96%);
+    background-image: linear-gradient(to right, rgba(150, 150, 150, 0.5), rgb(251, 194, 255) 60%, rgb(51, 194, 255) 65%);
     text-decoration: none;
 }
 
 .btn-p {
-    background-image: linear-gradient(to right, rgb(251, 194, 255) 6%, rgb(51, 194, 255) 51%, rgba(150, 150, 150, 0.5) 96%);
+    background-image: linear-gradient(to right, rgb(251, 194, 255), rgb(51, 194, 255) 60%, rgba(150, 150, 150, 0.5) 65%);
+    text-decoration: none;
+}
+
+.btn-wnb {
+    background-image: linear-gradient(to right, rgb(123, 155, 179), rgb(220, 142, 182) 60%, rgb(215, 203, 199) 65%);
     text-decoration: none;
 }
 
 
 /* and ends here */
 
-.bio {
+
+/*INDEX*/
+
+
+/*Setting up the scrolling effect with the gif/banner */
+
+.parallaxImg {
+    height: 80%;
+    width: 70%;
+    margin: auto;
+}
+
+.parallaxImg img {
+    width: 280px;
+    height: 200px;
+    top: 50%;
+    left: 51%;
+    margin-top: -100px;
+    margin-left: -140px;
+    position: fixed;
+    z-index: -1;
+}
+
+.parallaxBtn {
+    height: 20%;
+    width: 30%;
+    margin: auto;
+    text-align: center;
+}
+
+#arrow {
+    position: absolute;
+    bottom: 0.8rem;
+    font-size: 32px;
+    color: rgb(51, 194, 255);
+}
+
+
+/*Rest of the page*/
+
+.iAll {
+    height: 99%;
+    border: 5px solid rgba(150, 150, 150, 0.5);
+    background-color: rgba(255, 255, 255, 1);
+}
+
+
+/*Fix issue with border of .iAll dissapearring under the toolbar*/
+
+@media screen and (max-height: 500px) {
+    .iAll {
+        height: 98%;
+    }
+}
+
+
+/*</fix>.... (this is a joke... comedy is not my forte)*/
+
+#iBio {
     width: 70vw;
     margin: auto;
-    font-size: 32px;
-    font-family: poppins, sans-serif, times;
+    font-size: 48px;
+    font-family: 'Poppins', sans-serif, times;
     color: #3d3d3d;
     text-align: center;
 }
@@ -118,4 +136,159 @@ a, a:visited {
 
 a:hover {
     color: rgb(251, 194, 255);
+}
+
+
+/*POSTS*/
+
+.postH1 {
+    font-family: 'Titillium Web', sans-serif, times;
+    font-weight: 600;
+    color: #3d3d3d;
+    font-size: 32px;
+    font-style: italic;
+}
+
+.postH2 {
+    font-family: 'Titillium Web', sans-serif, times;
+    font-weight: 600;
+    color: #3d3d3d;
+    font-size: 24px;
+    font-style: italic;
+}
+
+.postP {
+    font-family: 'Poppins', sans-serif, times;
+    font-weight: 200;
+    color: #3d3d3d;
+    font-size: 20px;
+}
+
+.postBox {
+    width: 60vw;
+    height: 15vh;
+    margin: auto;
+    text-decoration: none;
+    background-color: rgba(215, 203, 199, 0.2);
+    box-shadow: 8px 8px 2px rgba(220, 142, 182, 0.3);
+}
+
+.postLinks {
+    text-decoration: none;
+}
+
+.postC1 {
+    width: 30%;
+    min-height: 100%;
+}
+
+.returnBtn {
+    height: 50%;
+    width: 10vh;
+    top: 25%;
+    border-radius: 20px;
+    box-shadow: 6px -6px 3px rgb(150, 150, 150);
+    margin-left: 2vw;
+    background-image: linear-gradient( rgb(220, 142, 182), rgb(123, 155, 179), rgb(215, 203, 199));
+    text-align: center;
+    position: fixed;
+}
+
+.returnBtn h1 {
+    font-size: 3.5vh;
+}
+
+.postC1 a:hover {
+    color: #3d3d3d;
+}
+
+.postC2 {
+    width: 50%;
+    min-height: 100%;
+}
+
+.postC2 h1 {
+    text-decoration: underline;
+}
+
+
+/*PORTFOLIO*/
+
+.pfAll {
+    min-height: 100vh;
+    border: 5px solid rgba(150, 150, 150, 0.5);
+}
+
+.pfAllText {
+    width: 60vw;
+    margin: auto;
+}
+
+#pfMainTitle {
+    font-family: 'Titillium Web', sans-serif, times;
+    font-weight: 600;
+    color: #3d3d3d;
+    font-style: italic;
+    font-size: 40px;
+}
+
+#pfIntro {
+    font-family: 'Poppins', sans-serif, times;
+    font-weight: 200;
+    color: #3d3d3d;
+    font-size: 28px;
+}
+
+
+/*WHATNOTBLOG*/
+
+.wAll {
+    min-height: 100vh;
+    border: 5px solid rgba(150, 150, 150, 0.5);
+    background-color: rgba(255, 255, 255, 1);
+}
+
+#wAllText {
+    width: 60vw;
+    margin: auto;
+}
+
+#wMainTitle {
+    font-family: 'Titillium Web', sans-serif, times;
+    font-weight: 600;
+    color: #3d3d3d;
+    font-style: italic;
+    font-size: 40px;
+}
+
+#wIntro {
+    font-family: 'Poppins', sans-serif, times;
+    font-weight: 200;
+    color: #3d3d3d;
+    font-size: 28px;
+}
+
+#dark {
+    text-decoration: line-through;
+}
+
+#rach1, #rach2 {
+    width: 40vw;
+    height: auto;
+}
+
+#de {
+    height: 50vw;
+    auto;
+}
+
+
+/*SHARED*/
+
+
+/*Stop nav. bar links moulding with the pink,
+that comes across the buttons due to same color*/
+
+.navBar a:hover {
+    color: #3d3d3d;
 }
