--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body, html {
 }
 
 .btn-h {
-    background-image: linear-gradient(to right, white 30%, rgb(51, 194, 255) 100%);
+    background-image: linear-gradient(to right, white 30%, rgb(220, 142, 182) 100%);
     text-decoration: none;
 }
 
@@ -70,35 +70,50 @@ body, html {
 
 /*Setting up the scrolling effect with the gif/banner */
 
+.parallaxArea {
+    height: 100%;
+    width: 100%;
+}
+
 .parallaxImg {
-    height: 80%;
-    width: 70%;
-    margin: auto;
+    width: 100vw;
+    height: 75vh;
 }
 
 .parallaxImg img {
-    width: 280px;
-    height: 200px;
+    width: 100%;
+    display: table-cell;
+    position: relative;
     top: 50%;
+    transform: translate(0, -50%);
+    /*top: 50%;
     left: 51%;
-    margin-top: -100px;
-    margin-left: -140px;
+    margin-top: -300px;
+    margin-left: -400px;*/
     position: fixed;
     z-index: -1;
 }
 
 .parallaxBtn {
-    height: 20%;
-    width: 30%;
-    margin: auto;
+    z-index: 0;
+    height: 4vh;
+    width: 30vw;
+    padding-top: 1vh;
+    margin-left: 35%;
+    margin-right: auto;
+    margin-top: 5%;
     text-align: center;
+    background-image: linear-gradient(to right, rgb(220, 142, 182), rgb(123, 155, 179), rgb(205, 203, 199));
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px white, -5px -5px 10px white, 5px -5px 5px white, -5px 5px 5px white;
+    ;
+    font-family: 'Poppins', sans-serif, times;
+    font-weight: 500;
+    font-size: 2vh;
 }
 
-#arrow {
-    position: absolute;
-    bottom: 0.8rem;
-    font-size: 32px;
-    color: rgb(51, 194, 255);
+#parallaxBtnLink {
+    text-decoration: none;
 }
 
 
@@ -195,7 +210,7 @@ body, html {
 }
 
 .postC1 {
-    width: 30%;
+    width: 30vw;
     min-height: 100%;
 }
 
@@ -222,7 +237,7 @@ body, html {
 }
 
 .postC2 {
-    width: 50%;
+    width: 50vw;
     min-height: 100%;
 }
 
@@ -296,7 +311,7 @@ body, html {
     height: auto;
 }
 
-#de {
+#de, #suggsDe {
     height: 50vw;
     auto;
 }
@@ -318,4 +333,8 @@ that comes across the buttons due to same color*/
 
 .navBar a:hover {
     color: #3d3d3d;
+}
+
+d;
+
 }
