New home image. Rewrote some portfolio pages. Added CV to right side menu

--- a/index.less
+++ b/index.less
@@ -61,7 +61,9 @@ svg:hover {
 h1,
 h2,
 h3,
-p {
+p,
+ul,
+table {
   color: var(--backgroundAlt);
   font-family: "DM mono", "monospace";
 }
@@ -82,7 +84,8 @@ h3 {
   text-decoration: underline;
 }
 
-p {
+p,
+ul {
   text-align: left;
 
   >a {
