Adjust theme colors

--- a/src/assets/sass/common/variables.scss
+++ b/src/assets/sass/common/variables.scss
@@ -1,7 +1,6 @@
 // THEME COLORS
 $white: #f4f5f6;
 $black: #18191a;
-$blue: #4464ad;
-$red: #db162f;
+$red: #e01a4f;
 $marigold: #eca400;
-$meadow: #00bd9d;
+$orange: #ee964b;
