Introduce sass modules for the carousel

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,9 +1,6 @@
 // Common Imports
-@import './common/variables.scss';
-@import './common/tools.scss';
-
-// Component Imports
-@import './components/carousel.scss';
+@import './settings.variables.scss';
+@import './settings.tools.scss';
 
 * {
   margin: 0;
