--- a/src/components/common/Carousel/Carousel.module.scss
+++ b/src/components/common/Carousel/Carousel.module.scss
@@ -1,3 +1,5 @@
+@import 'settings.tools';
+
 .carousel {
   position: relative;
   width: 100%;
@@ -6,7 +8,7 @@
   padding: 1rem 10%;
 }
 
-.carousel-control {
+.carouselControl {
   // Actual button is empty and is 100% padding to create a perfect circle that's responsive
   position: absolute;
   top: 50%;
@@ -60,66 +62,66 @@
     background-repeat: no-repeat;
     transition: background-image 0.3s;
   }
+}
 
-  &-prev {
-    left: -10%;
+.carouselControlPrev {
+  left: -10%;
 
-    &::after {
-      left: 12.5%;
-      background-image: linear-gradient(
-          to top right,
-          transparent 50%,
-          var(--carouselArrowColor) 50%
-        ),
-        linear-gradient(
-          to bottom right,
-          transparent 50%,
-          var(--carouselArrowColor) 50%
-        );
-      background-position: bottom right, top right;
-    }
-
-    &:hover {
-      background-image: linear-gradient(
-          to top right,
-          transparent 50%,
-          var(--carouselArrowColor) 50%
-        ),
-        linear-gradient(
-          to bottom right,
-          transparent 50%,
-          var(--carouselArrowColor) 50%
-        );
-    }
+  &::after {
+    left: 12.5%;
+    background-image: linear-gradient(
+        to top right,
+        transparent 50%,
+        var(--carouselArrowColor) 50%
+      ),
+      linear-gradient(
+        to bottom right,
+        transparent 50%,
+        var(--carouselArrowColor) 50%
+      );
+    background-position: bottom right, top right;
   }
 
-  &-next {
-    right: -10%;
-
-    &::after {
-      right: 12.5%;
-      background-image: linear-gradient(
-          to top left,
-          transparent 50%,
-          var(--carouselArrowColor) 50%
-        ),
-        linear-gradient(
-          to bottom left,
-          transparent 50%,
-          var(--carouselArrowColor) 50%
-        );
-      background-position: bottom left, top left;
-    }
+  &:hover {
+    background-image: linear-gradient(
+        to top right,
+        transparent 50%,
+        var(--carouselArrowColor) 50%
+      ),
+      linear-gradient(
+        to bottom right,
+        transparent 50%,
+        var(--carouselArrowColor) 50%
+      );
   }
 }
 
-.carousel-track-container {
+.carouselControlNext {
+  right: -10%;
+
+  &::after {
+    right: 12.5%;
+    background-image: linear-gradient(
+        to top left,
+        transparent 50%,
+        var(--carouselArrowColor) 50%
+      ),
+      linear-gradient(
+        to bottom left,
+        transparent 50%,
+        var(--carouselArrowColor) 50%
+      );
+    background-position: bottom left, top left;
+  }
+}
+
+.carouselTrackContainer {
   width: 100%;
   height: max-content;
   overflow-x: hidden;
 }
 
-.carousel-track {
+.carouselTrack {
   position: relative;
   width: max-content;
   height: max-content;
@@ -128,10 +130,4 @@
   justify-content: flex-start;
   align-items: center;
   transition: left 0.3s;
-}
-
-.carousel-card-container {
-  flex: 0 0 auto;
-  height: max-content;
-  padding: 0 10%;
 }
