Adjust line height on legacy component cards to allow for block links

--- a/src/components/LegacyComponentCard/LegacyComponentCard.module.scss
+++ b/src/components/LegacyComponentCard/LegacyComponentCard.module.scss
@@ -64,9 +64,10 @@
 
 .description {
   position: relative;
-  font-size: 16px;
   margin-bottom: 20px;
   padding: 10px 0;
+  font-size: 16px;
+  line-height: 1.5;
 
   &::after {
     content: '';
