Adjust canvas demo colors

--- a/src/components/NoisyTerrainCanvas/NoisyTerrainCanvas.module.scss
+++ b/src/components/NoisyTerrainCanvas/NoisyTerrainCanvas.module.scss
@@ -1,8 +1,8 @@
 @import '@/styles/settings.colors';
 
 :export {
-  wireframeColor: $white;
-  materialColor: $darkGreen;
+  wireframeColor: $lightGreen;
+  materialColor: $white;
 }
 
 .wrapper {
