Make footer sticky

--- a/src/components/AppLayout/Footer.module.scss
+++ b/src/components/AppLayout/Footer.module.scss
@@ -3,6 +3,8 @@
 @import '@/styles/settings.tools';
 
 .wrapper {
+  position: sticky;
+  bottom: 0;
   width: 100vw;
   height: $footer-height;
   background: var(--color--primary);
