--- a/src/routes/NotFound/NotFound.module.scss
+++ b/src/routes/NotFound/NotFound.module.scss
@@ -22,6 +22,8 @@
 .text {
   color: $white;
   font-size: 30px;
+  text-align: center;
+  line-height: 1.5;
 
   &:not(:last-of-type) {
     margin-bottom: 10px;
