--- a/src/styles/_settings.mixins.scss
+++ b/src/styles/_settings.mixins.scss
@@ -4,5 +4,5 @@
     rgba(255, 255, 255, 0)
   );
   backdrop-filter: blur(20px);
-  box-shadow: 0 0 5px 5px var(--color--tertiary);
+  box-shadow: 0 0 15px 2px var(--color--secondary);
 }
