Adjust home canavas color palette in light mode

--- a/src/components/ColorGradientCanvas/ColorGradientCanvas.module.scss
+++ b/src/components/ColorGradientCanvas/ColorGradientCanvas.module.scss
@@ -1,11 +1,11 @@
 @import '@/styles/settings.colors';
 
 :export {
-  lightColorZero: $darkGrey;
-  lightColorOne: $yellow;
-  lightColorTwo: $lightGreen;
-  lightColorThree: $darkGrey;
-  lightColorFour: $lightGreen;
+  lightColorZero: $lightGrey;
+  lightColorOne: $lightGreen;
+  lightColorTwo: $yellow;
+  lightColorThree: $red;
+  lightColorFour: $yellow;
 
   darkColorZero: $darkGrey;
   darkColorOne: $red;
