--- a/src/components/LegacyComponentCard/LegacyComponentCard.module.scss
+++ b/src/components/LegacyComponentCard/LegacyComponentCard.module.scss
@@ -46,6 +46,7 @@
   color: var(--color--secondary);
   transition: color 0.3s;
   font-size: 14px;
+  font-weight: 600;
   cursor: pointer;
 
   &:hover {
