--- a/src/styles/_settings.colors.scss
+++ b/src/styles/_settings.colors.scss
@@ -1,12 +1,16 @@
-// Generic theme colors
+// Shared colors
 $white: #f4f5f6;
-$black: #18191a;
+$black: #2f2f2f;
+
+// Light theme colors
 $lightGrey: #bbb;
+$darkBlue: #173753;
+$yellow: #ff9f1c;
+
+// Dark theme colors
 $darkGrey: #40434e;
 $lightGreen: #00a676;
-$darkGreen: #094734;
 $red: #da2c38;
-$yellow: #ff9f1c;
 
 // Brand colors
 $linkedin-blue: #0a66c2;
