--- a/src/components/common/Header/Header.module.css
+++ b/src/components/common/Header/Header.module.css
@@ -1,7 +1,7 @@
 .header {
   display: flex;
   flex-flow: row nowrap;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: stretch;
   padding: 0 var(--mantine-spacing-md);
 }
